Revision history for Perl module Module::Path

0.20
    - Internals refactory by KENTNL. GH #12

0.19 2015-03-16 NEILB
    - Added [MetaJSON] to dist.ini, so META.json will go into the distribution,
      as well as META.yml. Thanks to Lucas Kanashiro.
    - Dropped the -r test on directories, as we only actually need -d and -x.
      Thanks to Lucas Kanashiro.

0.18 2014-12-17
    - RIBASUSHI++ reminded me that to be a usable directory in @INC we need
      to check -d && -r && -x.

0.17 2014-12-17
    - Fixed RT#96433: ignore directories in @INC which don't exist.
      Apologies to ETHER++ for over-thinking this one,
      and taking so long to fix it.

0.16 2014-12-13
    - Added TODO.md with an initial todo list for the module

0.15 2014-10-14
    - Doing a foreach $dir (@INC) and then resolving symblinks on $dir
      was changing the entries in @INC. HAARG++ for pull request with fix.
    - Changed author email address to be my CPAN email address.

0.14 2014-08-16
    - Added Travis config, using cpanfile and cpanm to ensure all dependencies
      are installed before running tests with prove.
      Thanks to DAGOLDEN.
    - Improved the first paragraph of DESCRIPTION, so search results give
      a better summary of the module.

0.13 2014-02-22
    - Looks like in some rare circumstances, Cwd::abs_path() can croak,
      so now we wrap that in eval { } and deal accordingly.

0.12 2014-02-19
    - We now fully resolve symlinks in @INC paths. The previous 'fix'
      for Debian broke the tests on FreeBSD.
      Thanks to Géraud Continsouzas, and Daniel Lintott for help testing.

0.11_03 2014-02-18
    - Another place where we need to worry about getting undef.

0.11_02 2014-02-18
    - Wasn't handling the case where abs_path() returns undef,
      which it does if a symlink "goes nowhere".

0.11_01 2014-02-18
    - The testsuite fix in 0.11 caused a breakage on FreeBSD,
      where a directory path contains a symlink that wasn't